<resources>
    <string name="app_name">The_Companion</string>
    <string name="an_app_that_never_lets_you_doubt">An app that never lets you doubt!</string>
    <string name="button">button</string>
    <string name="get_started"><![CDATA[Get started ->]]></string>
    <string name="welcome_to_the_companion">Welcome to The Companion</string>
    <string name="sign_in_and_stay_connected">Sign in and stay connected</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register_below">Register below</string>
    <string name="disclaimer_it_s_a_task_manager_and_not_a_therapeutic_tool">Disclaimer: It\'s a task manager and not a therapeutic tool</string>
    <string name="email_username">Email/Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="task_list">Task List</string>
    <string name="add_task">Add Task</string>
    <string name="todo">TODO</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="contact_us">Contact us</string>
    <string name="donation">Donation</string>
    <string name="home_icon">home_icon</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="user_icon">user_icon</string>
    <string name="done">Done</string>
    <string name="camera_icon">camera_icon</string>
    <string name="add_description">Add Description</string>
    <string name="plus_icon">plus_icon</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new_task">Add New Task</string>
    <string name="plus">+</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="next">Next</string>
    <string name="tip_of_the_day">Tip of the Day</string>
    <string name="be_willing_to_accept_risk">Be willing to accept risk</string>
    <string name="task">Task</string>
    <string name="take_picture">Take Picture</string>
    <string name="write_your_task">Write your task...</string>
    <string name="task_description">Task Description</string>
    <string name="task_image">task image</string>
    <string name="congratulation_the_task_is_completed">Congratulation the task is completed</string>
    <string name="time_of_completion_10_00am_5_7_2021">Time of completion: 10:00AM, 5/7/2021</string>
    <string name="check">check</string>
    <string name="time">time</string>
    <string name="forget_password_click_here">Forget Password? Click Here</string>


</resources>