<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0cd490"
    tools:context=".Task_check">
    <View
        android:id="@+id/view3"
        android:layout_width="374dp"
        android:layout_height="626dp"
        android:background="@drawable/border_corner2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />
    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:contentDescription="@string/home_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_home2" />
    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/icon_user2" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/task_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/task_image"
        android:layout_width="360dp"
        android:layout_height="292dp"
        android:contentDescription="@string/task_image"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.071"
        tools:srcCompat="@drawable/farshed" />

    <TextView
        android:id="@+id/congratz_text"
        android:layout_width="350dp"
        android:layout_height="113dp"
        android:fontFamily="@font/almendra_bold"
        android:text="@string/congratulation_the_task_is_completed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#058F0A"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/task_image"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/time_stamp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/time_of_completion_10_00am_5_7_2021"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/congratz_text"
        app:layout_constraintVertical_bias="0.276" />


</androidx.constraintlayout.widget.ConstraintLayout>