<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_task"
    android:background="#0cd490">

    <View
        android:id="@+id/view4"
        android:layout_width="355dp"
        android:layout_height="626dp"
        android:background="@drawable/border_corner2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"/>

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:contentDescription="@string/home_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_home2" />

    <EditText
        android:id="@+id/task_Input"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:hint="Write your task..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.998"
        app:srcCompat="@drawable/icon_user2" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="163dp"
        android:layout_height="154dp"
        android:contentDescription="@string/camera_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.391"
        app:srcCompat="@drawable/camera_icon" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0cd490"
        app:backgroundTint="#1D212D"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/camera_icon"
        app:layout_constraintVertical_bias="0.367" />

    <Button
        android:id="@+id/pic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take Picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0cd490"
        app:backgroundTint="#1D212D"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/camera_icon"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/add_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_inline"
        android:text="@string/add_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.07" />

    <ImageView
        android:id="@+id/plus_icon"
        android:layout_width="37dp"
        android:layout_height="41dp"
        android:contentDescription="@string/plus_icon"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/plus_icon" />

    <TextView
        android:id="@+id/add_new_task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/add_new_task"
        android:textSize="35sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>