<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration_screen">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="225dp"
        android:background="#0cd490"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="416dp"
        android:layout_height="567dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lobster"
        android:text="@string/register_below"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/disclaimer_it_s_a_task_manager_and_not_a_therapeutic_tool"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="357dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.120000005">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBoxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:hint="@string/email_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="357dp"
        android:layout_height="54dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.110000014">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBoxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="357dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.19999999"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textBoxConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="357dp"
        android:layout_height="57dp"
        android:background="@drawable/button2"
        android:backgroundTint="#fff"
        android:contentDescription="@string/button"
        android:padding="0dp"
        android:paddingTop="15dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#0cd490"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>